--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <div class="option" data-correct="true">ويست</div>
             </div>
             <div class="question-container">
-                <p class="question">3. stop</p>
-                <div class="option" data-correct="true">ستوب</div>
-                <div class="option" data-correct="false">كتوب</div>
-                <div class="option" data-correct="false">ستيب</div>
+                <p class="question">3. zero</p>
+                <div class="option" data-correct="true">زيرو</div>
+                <div class="option" data-correct="false">زورو</div>
+                <div class="option" data-correct="false">نيرو</div>
             </div>
             <div class="question-container">
                 <p class="question">4. smart</p>
